--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^3.9.3",
     "gulp-hash": "^4.2.2",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
