--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "gulp": "^4.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^3.9.3",
@@ -14,9 +15,9 @@
     "pug": "^2.0.0-rc.4"
   },
   "scripts": {
-    "build": "NODE_ENV=production ./node_modules/.bin/gulp build",
-    "build:dev": "nodemon ./node_modules/.bin/gulp watch",
-    "build:clean": "./node_modules/.bin/gulp clean"
+    "build": "cross-env NODE_ENV=production gulp build",
+    "build:dev": "nodemon gulp watch",
+    "build:clean": "gulp clean"
   },
   "keywords": [],
   "author": "",
